# Change Log

The format is based on [Keep a Changelog](http://keepachangelog.com/).

## [Unreleased]

## [v0.1.5] - Sat, 24 Mar 2018 12:59:57 +0900

### Changed
- 예약이나 예약변경시 주문서의 의류착용일을 사용자의 의류착용일로 수정 (#11)

## [v0.1.4] - Tue, 27 Feb 2018 01:11:27 +0900

### Changed
- 취업날개 방문예약시 발송되는 문자 메세지 내용 수정 (#18)

## [v0.1.3] - Thu, 22 Feb 2018 12:56:48 +0900

### Changed
- 취업날개 최초예약과 예약시간변경의 호출 parameter 를 다르게 함

## [v0.1.2] - Mon, 12 Feb 2018 03:34:50 +0900

### Changed
- 쿠폰 허용 개수 제한을 고려해 사용을 가능하게 함 (#14)
- 객체 생성 시 명시적으로 모니터 서비스 주소를 인자로 전달함 (#15)

## [v0.1.1] - Fri, 20 Oct 2017 15:03:34 +0900

### Fixed
- update_reservated 에서 결제대기 주문서도 허용

## [v0.1.0] - Wed, 20 Sep 2017 13:30:58 +0900

### Changed
- reservated 의 인터페이스 변경
- update_reservated 에서 agent, ignore, online 을 지원

## [v0.0.6] - Wed, 20 Sep 2017 11:15:47 +0900

### Added
- reservated 방문예약 (#11)
- update_reservated 방문예약 변경 (#11)
- cancel 방문예약 취소  (#11)

## [v0.0.5] - Thu, 31 Aug 2017 14:17:45 +0900

### Changed
- SMS 기본 발신번호 변경 (#10)

## [v0.0.4] - Thu, 10 Aug 2017 17:10:18 +0900

### Changed
- 대리인 대여가 아닐때에만 사용자정보의 신체치수를 주문서에 복사

## [v0.0.3] - Mon, 24 Jul 2017 23:05:58 +0900

### Fixed
- 연체일/연장일이 아닌 연체료/연장료를 기준으로 연체료/연장료 결제방법의 입력 값을 검증 (#8)

## [v0.0.2] - Mon, 24 Jul 2017 13:09:19 +0900

### Changed
- `결제대기 -> 대여중` 에서 주문서에 사용자의 신체치수를 복사
- 환불하면 쿠폰을 사용가능하도록 변경

## [v0.0.1] - Thu, 13 Jul 2017 11:44:33 +0900

### Added
- 포장 -> 포장완료 (#1)
- 포장완료 -> 결제대기 (#2)
- 결제대기 -> 대여중 (#3)
- 대여중 -> 반납 (#4)
- 대여중 -> 부분반납 (#5)
- 결제대기 -> 포장 [새로주문]
- 대여중 -> 환불 (#6)
- 대여기간의 변경
- 대여상세 금액변경